tests/machine/x/c/string_compare.error
line: 0
error: output mismatch
-- got --
1
1
1
1
-- want --
true
true
true
true
   1: #include <stdio.h>
